# glossing

./: .gitignore  README.org  cabal-shell.nix  default.nix  glossing.cabal
gloss/: Main.hs  Vig.hs
not-gloss/: Main.hs
