cabal-version:  3.0
version: 0.1.0.0
name: glossing
common commons
        default-language: Haskell2010
        build-depends: base, gloss, gloss-rendering
                            
executable glossing
        import: commons
        main-is: Main.hs
        other-modules: Vig
        hs-source-dirs: app
