cabal-version:  3.0
version: 0.1.0.0
name: glossing
common commons
        default-language: Haskell2010
        build-depends: base, gloss, not-gloss, linear, spatial-math

executable gloss
        import: commons
        main-is: Main.hs
        other-modules: Vig
        hs-source-dirs: gloss

      

executable not-gloss
        import: commons
        main-is: Main.hs
        hs-source-dirs: not-gloss
